# sdk-rust

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.cursor/plans/: 1_setup_project.md  2_roadmap.md
.cursor/rules/: 1-project-overview.mdc  2-workflow.mdc  3-commit-messages.mdc  4-rust.mdc
.github/workflows/: ci.yml  publish.yml
examples/: dm_echo_bot.rs  echo_bot.rs  send_group_message.rs
examples/cf_echo_bot/: .control_token  .dev.vars.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  wrangler.toml
examples/cf_echo_bot/src/: lib.rs
examples/cf_spike/: .dev.vars.example  .gitignore  Cargo.toml  README.md  SPIKE_RESULTS.md  build.rs  package-lock.json  package.json  wrangler.toml
examples/cf_spike/src/: lib.rs
proto/myconversation/api/: code.proto  model.proto  myconversation.proto
reference/python/: adapter.py  chunking.py  client.py  config.py  mention.py  plugin.yaml  stream.py  transport.py
reference/python/proto/: model_pb2.py  model_pb2.pyi  myconversation_connect.py  myconversation_pb2.py  myconversation_pb2.pyi  myconversation_pb2_grpc.py
reference/python/proto/google/api/: annotations_pb2.py  http_pb2.py
reference/python/tests/: test_adapter.py  test_chunking.py  test_client.py  test_config.py  test_mention.py  test_proto_imports.py  test_smoke.py  test_stream.py  test_transport.py
reference/typescript/: README.md  esbuild.config.mjs  index.ts  openclaw.plugin.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-entry.ts  tsconfig.build.json  tsconfig.json
reference/typescript/docs/superpowers/plans/: 2026-06-08-openclaw-chatgroup.md  2026-06-12-myconversation-text-chunking.md  2026-06-26-myconversation-mention-format.md  2026-07-09-openclaw-myconversation-media.md
reference/typescript/docs/superpowers/specs/: 2026-06-08-openclaw-chatgroup-design.md  2026-06-12-myconversation-text-chunking-design.md  2026-06-26-myconversation-mention-format-design.md  2026-07-09-openclaw-myconversation-media-design.md
reference/typescript/scripts/: test-registry.sh
reference/typescript/src/: channel-log.test.ts  channel-log.ts  channel.ts  config.test.ts  config.ts  gateway.ts  openclaw-sdk.d.ts  runtime.test.ts  runtime.ts
reference/typescript/src/connect/: client.test.ts  client.ts  errors.test.ts  errors.ts  myedge.ts  transport.test.ts  transport.ts  types.test.ts  types.ts
reference/typescript/src/inbound/: dispatch.ts  mention.test.ts  mention.ts  stream.test.ts  stream.ts
reference/typescript/src/media/: classify.test.ts  classify.ts  context.test.ts  context.ts  download.test.ts  download.ts  limits.test.ts  limits.ts  outbound.test.ts  outbound.ts  paths.test.ts  paths.ts  upload.test.ts  upload.ts
reference/typescript/src/mention/: format.test.ts  format.ts
reference/typescript/src/outbound/: reply.test.ts  reply.ts
src/: async_time.rs  chunking.rs  client.rs  config.rs  dm.rs  error.rs  group.rs  lib.rs  listen.rs  media.rs  mention.rs  pb.rs  reaction.rs  reconnect.rs  stream.rs  transport.rs  types.rs
src/client/: mod.rs  native.rs  wasm.rs
