[package]
name = "onechat-sdk"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "Rust SDK for 1chat.xyz (gRPC-Web + server streaming)"
license = "MIT"
repository = "https://github.com/1chatxyz/sdk-rust"
readme = "README.md"
keywords = ["chat", "messaging", "sdk", "grpc", "grpc-web"]
categories = ["api-bindings", "asynchronous"]
exclude = [
    ".cursor/",
    "reference/",
    ".env",
    ".env.local",
    "examples/cf_spike/",
    "examples/cf_echo_bot/",
]

[lib]
name = "onechat_sdk"
path = "src/lib.rs"

[dependencies]
futures-util = { version = "0.3", default-features = false, features = [
    "async-await",
    "std",
] }
http = "1"
prost = "0.14"
prost-types = "0.14"
regex = "1"
thiserror = "2"
tonic = { version = "0.14", default-features = false, features = ["codegen"] }
tonic-prost = "0.14"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
url = "2"
web-time = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "1", features = ["client", "http1"] }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "http1",
    "ring",
    "tls12",
    "webpki-tokio",
] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tonic-web = "0.14"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }
tonic-web-wasm-client = { package = "onechat-tonic-web-wasm-client", version = "0.1.0", path = "vendor/tonic-web-wasm-client" }
uuid = { version = "1", features = ["v4", "js"] }

[build-dependencies]
tonic-prost-build = { version = "0.14", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
