[package]
name = "onechat-cf-echo-bot"
version = "0.1.0"
edition = "2024"
publish = false
description = "Cloudflare Workers Durable Object echo bot using onechat-sdk"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
onechat-sdk = { path = "../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
worker = "0.8"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
# Avoid strip/lto — worker-build's wasm-bindgen abort handler needs
# a usable externref table (strip/lto has broken that combo on 0.2.126).
opt-level = "s"
codegen-units = 1
