[package]
name = "onechat-cf-spike"
version = "0.1.0"
edition = "2024"
publish = false
description = "Phase 0 spike: gRPC-Web over Fetch on Cloudflare Workers (not production SDK)"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = [
    "async-await",
    "std",
] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
http = "1"
prost = "0.14"
prost-types = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = { version = "0.14", default-features = false, features = ["codegen"] }
tonic-prost = "0.14"
tonic-web-wasm-client = { package = "onechat-tonic-web-wasm-client", version = "0.1.0", path = "../../vendor/tonic-web-wasm-client" }
uuid = { version = "1", features = ["v4", "js"] }
wasm-bindgen = "0.2"
worker = "0.8"

[build-dependencies]
tonic-prost-build = { version = "0.14", default-features = false }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
# Avoid strip/lto here — worker-build's wasm-bindgen abort handler needs
# a usable externref table (strip/lto has broken that combo on 0.2.126).
opt-level = "s"
codegen-units = 1
